...
  /// Soft delete flag
  late bool isDeleted;

  /// When this profile was deleted (if applicable)
  DateTime? deletedAt;

  Profile();

  Profile.create({
    required this.profileId,
    required this.accountId,
    required this.name,
    this.description,
...
